refactor: replace magic dog constants with typed enums